# parmetis-ghostlayers

./: CMakeLists.txt  LICENSE  README.md  main.cpp  makefile.old  module_parmetis.hpp
example/: main
src/: main.cpp  memory.c  memory.h  module_parmetis.cpp  module_parmetis.hpp  read_write.cpp  read_write.hpp
